[gd_scene load_steps=8 format=3 uid="uid://bvmc3vdlgqnse"]

[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_kdvnk"]
[ext_resource type="Script" uid="uid://8j8p5twjfrig" path="res://gdre_new_pck.gd" id="1_lfpko"]

[sub_resource type="Theme" id="Theme_sqj8d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqe20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4klg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yxwtx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vbu8o"]

[node name="GdreNewPck" type="AcceptDialog"]
auto_translate_mode = 1
title = "Create New Pck..."
position = Vector2i(0, 36)
size = Vector2i(800, 594)
visible = true
theme = ExtResource("1_kdvnk")
ok_button_text = "Save"
dialog_hide_on_ok = false
script = ExtResource("1_lfpko")

[node name="DirectoryDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="SaveDialog" type="FileDialog" parent="."]
title = "Save PCK..."
access = 2
use_native_dialog = true

[node name="EmbedSourceDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 792.0
offset_bottom = 545.0

[node name="DirectoryLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 472.0
offset_bottom = 46.0
text = "Directory:"

[node name="Directory" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 46.0
offset_right = 621.0
offset_bottom = 77.0
placeholder_text = "Select a directory..."

[node name="DirectorySelect" type="Button" parent="Control"]
layout_mode = 0
offset_left = 641.0
offset_top = 43.0
offset_right = 731.0
offset_bottom = 76.0
text = "Select"

[node name="PckVersionLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 82.0
offset_right = 577.0
offset_bottom = 113.0
text = "PCK version"

[node name="Version" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 117.0
offset_right = 174.0
offset_bottom = 148.0
item_count = 3
popup/item_0/text = "0 (Godot 1.x, 2.x)"
popup/item_0/id = 0
popup/item_1/text = "1 (Godot 3.x)"
popup/item_1/id = 1
popup/item_2/text = "2 (Godot 4.x)"
popup/item_2/id = 2

[node name="EncryptionLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 153.0
offset_right = 148.0
offset_bottom = 184.0
text = "Encryption:"

[node name="Encrypt" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 185.0
offset_right = 201.0
offset_bottom = 216.0
text = "Encrypt Directory"

[node name="IncludeFiltersLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 232.0
offset_top = 153.0
offset_right = 354.0
offset_bottom = 184.0
text = "Include Filters:"

[node name="IncludeFilters" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 232.0
offset_top = 185.0
offset_right = 432.0
offset_bottom = 215.0
placeholder_text = "*.gd,*.tres, etc."

[node name="ExcludeFiltersLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 455.0
offset_top = 153.0
offset_right = 575.0
offset_bottom = 184.0
text = "Exclude Filters"

[node name="ExcludeFilters" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 457.0
offset_top = 185.0
offset_right = 702.0
offset_bottom = 217.0
placeholder_text = "*.gd,*.tres, etc."

[node name="DotLabel1" type="Label" parent="Control"]
offset_left = 102.0
offset_top = 264.0
offset_right = 115.0
offset_bottom = 321.0
text = "."

[node name="DotLabel2" type="Label" parent="Control"]
offset_left = 211.0
offset_top = 264.0
offset_right = 224.0
offset_bottom = 295.0
text = "."

[node name="EngineVersionLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 222.0
offset_right = 491.0
offset_bottom = 279.0
text = "Reported Godot engine version (<minor>.<major>.<patch>)
"

[node name="VerMajor" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 255.0
offset_right = 105.562
offset_bottom = 286.0

[node name="VerMinor" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 118.0
offset_top = 255.0
offset_right = 208.562
offset_bottom = 286.0

[node name="VerPatch" type="SpinBox" parent="Control"]
layout_mode = 0
offset_left = 226.0
offset_top = 255.0
offset_right = 316.562
offset_bottom = 285.0

[node name="EmbedPckLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 288.0
offset_right = 467.0
offset_bottom = 328.0
text = "Embed PCK:"

[node name="Embed" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 321.0
offset_right = 118.0
offset_bottom = 352.0
text = "Embed"

[node name="EmbedSource" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 132.0
offset_top = 321.0
offset_right = 617.0
offset_bottom = 352.0
placeholder_text = "Select an exe..."

[node name="EmbedSourceSelect" type="Button" parent="Control"]
layout_mode = 0
offset_left = 633.0
offset_top = 321.0
offset_right = 723.0
offset_bottom = 351.0
text = "Select"

[node name="ExtraTagLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 363.0
offset_right = 468.0
offset_bottom = 394.0
text = "Watermark text"

[node name="ExtraTag" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 395.0
offset_right = 577.0
offset_bottom = 426.0

[node name="Save" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 312.0
offset_top = 546.0
offset_right = 459.0
offset_bottom = 584.0
text = "Save"

[node name="ErrorText" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 435.0
offset_right = 775.0
offset_bottom = 531.0
theme = SubResource("Theme_sqj8d")
theme_override_styles/fill = SubResource("StyleBoxEmpty_iqe20")
theme_override_styles/background = SubResource("StyleBoxEmpty_y4klg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yxwtx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vbu8o")
bbcode_enabled = true
text = "[color=#FF0000]ERROR[/color]"
scroll_active = false

[connection signal="canceled" from="." to="." method="_on_close_requested"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="confirmed" from="." to="." method="_on_save_pressed"]
[connection signal="dir_selected" from="DirectoryDialog" to="." method="_on_directory_dialog_dir_selected"]
[connection signal="file_selected" from="DirectoryDialog" to="." method="_on_directory_dialog_dir_selected"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="file_selected" from="EmbedSourceDialog" to="." method="_on_embed_source_dialog_file_selected"]
[connection signal="text_changed" from="Control/Directory" to="." method="_verify"]
[connection signal="text_submitted" from="Control/Directory" to="." method="_verify"]
[connection signal="pressed" from="Control/DirectorySelect" to="." method="_on_directory_select_pressed"]
[connection signal="toggled" from="Control/Encrypt" to="." method="_verify"]
[connection signal="text_changed" from="Control/EmbedSource" to="." method="_verify"]
[connection signal="pressed" from="Control/EmbedSourceSelect" to="." method="_on_embed_source_select_pressed"]
[connection signal="pressed" from="Control/Save" to="." method="_on_save_pressed"]
